--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "urlshortner",
   "version": "0.1.0",
   "private": true,
+  "proxy":"https://url-shorter-backend-zg55.onrender.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
