--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,10 @@
     "sass": "^1.83.4",
     "web-vitals": "^2.1.4"
   },
+  "overrides": {
+    "react-typical": {
+      "react": "^19.0.0"
+    }},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
